[gd_scene load_steps=2 format=3 uid="uid://chakex8pjhjee"]

[ext_resource type="Script" path="res://scenes/common/menu.gd" id="1_r5qe7"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_r5qe7")

[node name="Control" type="Control" parent="."]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Control"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="LabelGodot" type="Label" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="LabelOS" type="Label" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="LabelGPU" type="Label" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="LightmapToggle" type="CheckButton" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
button_pressed = true
text = "Lightmap toggle"
flat = true

[node name="SceneToggle" type="CheckButton" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
button_pressed = true
text = "Scene toggle"
flat = true

[node name="Control" type="Control" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonIssue" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
flat = true
alignment = 0

[node name="Exit" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "return to main scene"
flat = true
alignment = 0

[node name="Control" type="Control" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabelInfo" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
bbcode_enabled = true

[connection signal="toggled" from="Control/MarginContainer/HBoxContainer/VBoxContainer/LightmapToggle" to="." method="_on_lightmap_toggle_toggled"]
[connection signal="toggled" from="Control/MarginContainer/HBoxContainer/VBoxContainer/SceneToggle" to="." method="_on_scene_toggle_toggled"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/ButtonIssue" to="." method="_on_button_issue_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
